# C-Libraries

./: .gitignore  CMakeLists.txt  Todo.md
DataStructures/: Buffer.c  Buffer.h  CMakeLists.txt  FixedSizeBuffer.c  FixedSizeBuffer.h  List.c  List.h  Queue.c  Queue.h  Stack.c  Stack.h  String.c  String.h  Trie.c  Trie.h
FileSystem/: CMakeLists.txt  Directory.c  Directory.h  File.c  File.h
Streamers/: CMakeLists.txt  Streamer.c  Streamer.h  StreamerPosition.h  StringStreamer.c  StringStreamer.h
Tests/: BufferTester.h  CMakeLists.txt  DirectoryTester.h  FileTester.h  FixedSizeBufferTester.h  ListTester.h  Person.h  QueueTester.h  StackTester.h  StringSequence.h  StringStreamerTester.h  StringTester.h  Test.c  TestSequenceGenerator.py  TrieTester.h  Words.h
Utils/: CMakeLists.txt  MathUtils.h  MemUtils.c  MemUtils.h  PrintUtils.c  PrintUtils.h  TestUtils.h  Utils.h
